<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_blue" >



    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_description"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/textViewWelcome"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editTextTextName"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/buttonMakeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:textSize="24dp"
        android:textColor="@color/dark_blue"
        android:background="@color/white"
        android:onClick="onClickCreateOrder"/>
</LinearLayout>